--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,5 @@
 @import './component/container';
 @import './component/header';
 @import './component/widget';
+@import './component/modal';
 @import './component/option';
