--- a/src/styles/component/_button.scss
+++ b/src/styles/component/_button.scss
@@ -29,3 +29,10 @@
     color: $off-white;
     padding: 0;
 }
+
+@media (max-width: $desktop-breakpoint) {
+
+    .big-button {
+        margin-bottom: $m-size;
+    }
+}
